# Whale-Wallet

./: .env.example  .gitignore  Dockerfile  GLOBAL_RULES.md  README.md  cloudbuild.yaml  deep_research.txt  docker-compose.yml  pyproject.toml  requirements.txt  settings.gradle.kts
alembic/: env.py
app/: build.gradle.kts  chains.py  config.py  main.py
app/ai/: __init__.py  concierge.py
app/ai/agents/: __init__.py  router.py
app/ai/memory/: __init__.py  long_term.py  short_term.py
app/ai/prompts/: __init__.py  system.py  templates.py
app/ai/tools/: __init__.py
app/api/: health.py  views.py
app/api/v1/: auth.py  concierge.py  policy.py  router.py  transaction.py  wallet.py
app/core/: __init__.py  events.py  middleware.py  security.py
app/policy_engine/: __init__.py  evaluator.py  executor.py
app/policy_engine/rules/: __init__.py  base.py  timelock.py  velocity.py  whitelist.py
app/src/androidTest/java/com/example/whalewallet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/whalewallet/: MainActivity.kt
app/src/main/java/com/example/whalewallet/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/whalewallet/: ExampleUnitTest.kt
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  concierge.html  dashboard.html  login.html  policies.html  portfolio.html  settings.html  transactions.html
gradle/wrapper/: gradle-wrapper.properties
infrastructure/: init.sql
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_policy_engine.py
